 * client Changes
  * remove setEmbeded()
  * set reset as public service
  * set init as private service
 
 * adds
  * add getOpenM_ID_MyAccount_URL() to recover URL to My OpenM-ID account

 * libraries Changes
  * upgrade openid version to commit of 21/02/2014